Making creature info identified after encountering (killing) or from Prof Nym; fixing statuses not being removed when switching to tacticalMode and status turns left not diminishing; fixing follow mode issue with overlapping pc positions; fixes veteran being able to activate feelThePain when it's already active; removing char info button from context menu for npcs; adding ability to have scripted dialogs and adding dialog for elder thing encounter

--- a/client/src/css/ui.css
+++ b/client/src/css/ui.css
@@ -622,7 +622,7 @@ h3 {
 .character-panel-status-row {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	padding: 5px 0;
 }
 
@@ -633,11 +633,11 @@ h3 {
 }
 
 .character-panel-status-name {
-	flex-basis: 60%;
+	flex-basis: 55%;
 }
 
 .character-panel-status-turns {
-	flex-basis: 30%;
+	flex-basis: 25%;
 	align-self: center;
 	text-align: right;
 }
